# sp-prediction

./: .gitignore  README.md  plotpickle.py  pyproject.toml  requirements.txt  temp
2state/: 2state_ohe_lin.ipynb  2state_ohe_lin_cnn.ipynb  2state_ohe_lstm_cnn_lin.ipynb  2state_tran_lin_cnn.ipynb
6state/: 6state_ohe_lstm_cnn.ipynb  6state_protbert_lstm_cnn.ipynb  6state_t5_lstm_cnn.ipynb  6state_vhse_lstm_cnn.ipynb  bert_sp_classifier_perres_v5.ipynb  bert_sp_classifier_perres_v6.ipynb
6state/t5_lstm_cnn/: __init__.py  config.py  dataset.py  evaluate.py  model.py  train.py  utils.py
6state/t5_lstm_cnn_2/: config.py  evaluate.py  metrics.py  model.py  train.py  utils.py  visualize.py
6state/t5_lstm_cnn_3/: __init__.py  config.py  dataset.py  model.py  train.py  visualize.py
6state/t5_lstm_cnn_4/: config.py  dataset.py  evaluate.py  model.py  utils.py  visualize.py
6state/t5_lstm_cnn_5/: config.py  evaluate.py  metrics.py  model.py  optimize.py  train.py  visualize.py
6state/t5_lstm_cnn_6/: config.py  count_parameters.py  dataset.py  evaluate.py  evaluate_folds_mcc.py  metrics.py  model.py  optimize.py  train.py  utils.py  visualize.py
data/: bar_plot_all_models.py  embed_sequences.py  embeddings_pipline.ipynb  filter_embeddings_script.py  inputDB_h 2.index  reduced_pipeline.ipynb
models/: 2state_ohe_lin_v1.pt
sandwichsp/: evaluate.py  pyproject.toml
sandwichsp/src/sandwichsp/: __init__.py  config.py  embeddings.py  model.py  predictor.py  weights.py
sandwichsp/src/sandwichsp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+48 files in other folders)
